- update initial cache file and log file
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10271 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/lib/cachedDescriptions.plist
+++ b/Support/lib/cachedDescriptions.plist
@@ -339,6 +339,8 @@
 		<string></string>
 		<key>Flex</key>
 		<string>Flex is the SDK used to build Flash Applications using the MXML markup languge and ActionScript 3.</string>
+		<key>GetBundles</key>
+		<string>GUI to install TextMate bundles coming from different svn or git hosts.</string>
 		<key>Google Code</key>
 		<string></string>
 		<key>HTML Revised</key>
