- cache updated - fixed: after pressing 'update' the table shows all items and the selection choice bar is set to 'All' - changed: while fetching the bundle lists the table will be sorted by names instead by repositories
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10284 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/lib/cachedDescriptions.plist
+++ b/Support/lib/cachedDescriptions.plist
@@ -375,6 +375,8 @@
 		<string>Extension to the R.bundle to remote Mac's R GUI R.app</string>
 		<key>R Console (Rdaemon)</key>
 		<string>Extension to the R.bundle to run a R Terminal inside of a TextMate window.</string>
+		<key>RelaxNG</key>
+		<string></string>
 		<key>Ruby Sass</key>
 		<string>Template language for easily creating CSS; implemented in ruby.</string>
 		<key>Ruby Shoulda</key>
