- fixed: typo corrected; instead of "cp -r" "cp -R" is correct (thanks to Jacob Lukas) - updated: cachedDescriptions.plist was updated
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10433 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/lib/cachedDescriptions.plist
+++ b/Support/lib/cachedDescriptions.plist
@@ -297,7 +297,7 @@
 		<key>Twiki</key>
 		<string>Syntax highlight for the markup language used by the Twiki wiki system.</string>
 		<key>Txt2tags</key>
-		<string>Txt2tags  converts text files with minimal markup to HTML, XHTML, SGML, LaTeX, Lout, Man page, MoinMoin, MagicPoint and PageMaker. 	</string>
+		<string>Txt2tags  converts text files with minimal markup to HTML, XHTML, SGML, LaTeX, Lout, Man page, Wikipedia, Google Code Wiki, DokuWiki, MoinMoin, MagicPoint and PageMaker. 	</string>
 		<key>Vectorscript</key>
 		<string>The scripting language used by the VectorWorks CAD software.</string>
 		<key>Widget Creator</key>
@@ -345,6 +345,8 @@
 		<string></string>
 		<key>HTML Revised</key>
 		<string>Support for the Hypertext Markup Language.</string>
+		<key>JSFL</key>
+		<string>JSFL (Flash JavaScript) is a JavaScript API used to automate the Adobe Flash Authoring Environment.</string>
 		<key>Java Velocity</key>
 		<string>Support for the Velocity templating language.</string>
 		<key>JavaScript</key>
