support for extended HTML descriptions in info.plist (delimiter = <hr />) - short description shown in bundle list is everything before <hr /> - in info window everything after <hr /> is shown as description
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10447 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -13,7 +13,7 @@
 		<string>390939DF-A7B1-4751-821E-9197171BBE48</string>
 	</array>
 	<key>description</key>
-	<string>GUI to install TextMate bundles coming from different svn or git hosts.&lt;hr /&gt;&lt;h2&gt;GetBundles&lt;/h2&gt;&lt;p&gt;&lt;i&gt;Author:&lt;/i&gt; Hans-J&amp;ouml;rg Bibiko&lt;/p&gt;&lt;p&gt;GetBundles provides an easy to use interface to install TextMate bundle which are hosted at macromates svn repositories &lt;a href="http://macromates.com/svn/Bundles/trunk/Bundles"&gt;Bundles&lt;/a&gt; and &lt;a href="http://macromates.com/svn/Bundles/trunk/Review/Bundles"&gt;Review&lt;/a&gt; and at &lt;a href="http://github.com"&gt;github.com&lt;/a&gt;.&lt;/p&gt;</string>
+	<string>GUI to install TextMate bundles coming from different svn or git hosts.&lt;hr /&gt;&lt;h2&gt;GetBundles&lt;/h2&gt;&lt;p&gt;&lt;i&gt;Author:&lt;/i&gt; Hans-J&amp;ouml;rg Bibiko&lt;/p&gt;&lt;p&gt;GetBundles provides an easy to use interface to install TextMate bundles which are hosted at macromates svn repositories &lt;a href="http://macromates.com/svn/Bundles/trunk/Bundles"&gt;Bundles&lt;/a&gt; and &lt;a href="http://macromates.com/svn/Bundles/trunk/Review/Bundles"&gt;Review&lt;/a&gt; and at &lt;a href="http://github.com"&gt;github.com&lt;/a&gt;.&lt;/p&gt;</string>
 	<key>name</key>
 	<string>GetBundles</string>
 	<key>ordering</key>
