- renamed Leopard NIB for Advanced Drawer: Update Support Folder - cachedDescription.plist updated
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10619 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/lib/cachedDescriptions.plist
+++ b/Support/lib/cachedDescriptions.plist
@@ -114,8 +114,12 @@
 		<string></string>
 		<key>JavaScript</key>
 		<string>Support for JavaScript.</string>
+		<key>JavaScript Flash</key>
+		<string>JSFL (Flash JavaScript) is a JavaScript API used to automate the Adobe Flash Authoring Environment.</string>
 		<key>JavaScript MooTools</key>
 		<string>MooTools Framework by Valerio Proietti. http://mootools.net</string>
+		<key>JavaScript Objective-J</key>
+		<string>Cappuccino is an open source framework that makes it easy to build desktop-caliber applications that run in a web browser.</string>
 		<key>JavaScript Prototype &amp; Script_aculo_us</key>
 		<string>Support for the Prototype JavaScript library.</string>
 		<key>JavaScript YUI</key>
@@ -124,6 +128,8 @@
 		<string>Support for the jQuery JavaScript library.</string>
 		<key>Latex</key>
 		<string>Support for the LaTeX typesetting system, the de facto standard for scientific papers.</string>
+		<key>Lex-Flex</key>
+		<string>Lex/Flex is a lexical analyzer generator.</string>
 		<key>Lex:Flex</key>
 		<string>Lex/Flex is a lexical analyzer generator.</string>
 		<key>Lighttpd</key>
@@ -204,6 +210,8 @@
 		<string>Perforce is a commercial source control management system.</string>
 		<key>Perl</key>
 		<string>Support for the Perl programming language.</string>
+		<key>Perl HTML-Template</key>
+		<string>HTML::Template is a template processing system for Perl.</string>
 		<key>Perl Mason</key>
 		<string>With Mason you can embed Perl code in your HTML.</string>
 		<key>Perl Template Toolkit</key>
@@ -333,12 +341,16 @@
 		<string>The cascading stylesheet language is used in web pages. This bundle has syntax highlight, lots of snippets, validation, and more.</string>
 		<key>ColdFusion</key>
 		<string>Support for the ColdFusion web development environment from Adobe.</string>
+		<key>Confluence</key>
+		<string>Confluence (http://atlassian.com/confluence) markup format</string>
 		<key>Cron</key>
 		<string>Support for crontab files part of the cron scheduling system used on many Unix-like systems.</string>
 		<key>F Sharp</key>
 		<string></string>
 		<key>Flex</key>
 		<string>Flex is the SDK used to build Flash Applications using the MXML markup languge and ActionScript 3.</string>
+		<key>Forth</key>
+		<string>A stack-based programming language.</string>
 		<key>GetBundles</key>
 		<string>GUI to install TextMate bundles coming from different svn or git hosts.</string>
 		<key>Google Code</key>
@@ -385,6 +397,8 @@
 		<string>Support for the Shoulda testing framework.</string>
 		<key>Scala</key>
 		<string>A general purpose programming language combining both object-oriented and functional language features. Runs on the Java Virtual Machine and is interoperable with Java.</string>
+		<key>Scratch</key>
+		<string>Utilities for scratch (temporary) files.</string>
 		<key>SecondLife LSL</key>
 		<string>The Linden Scripting Language used by the game Second Life.</string>
 		<key>Subversion++</key>
