• GetBundles ONLY uses now DIALOG1 caused by status of DIALOG2 • cachedDescription updated
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10651 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/lib/cachedDescriptions.plist
+++ b/Support/lib/cachedDescriptions.plist
@@ -367,6 +367,8 @@
 		<string>JSDoc is a tool that parses inline documentation in JavaScript source files, and produces an documentation of the JavaScript code.</string>
 		<key>JavaScript MooTools</key>
 		<string>Mootools framework by Valerio Proietti.</string>
+		<key>JavaScript Objective-J</key>
+		<string>Support for the Objective-J (cappuccino) web application development environment. Cappuccino is an open source framework that makes it easy to build desktop-caliber applications that run in a web browser and in TextMate's HTML output window.</string>
 		<key>JavaScript Prototype &amp; Script_aculo_us</key>
 		<string>Support for the Prototype JavaScript library.</string>
 		<key>K</key>
