• description cache for svn repos updated
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10688 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/lib/cachedDescriptions.plist
+++ b/Support/lib/cachedDescriptions.plist
@@ -87,7 +87,7 @@
 		<key>Groovy</key>
 		<string></string>
 		<key>Groovy Grails</key>
-		<string></string>
+		<string>Grails - A ‘code by convention’ Groovy web framework.</string>
 		<key>HTML</key>
 		<string>Support for the Hypertext Markup Language.</string>
 		<key>Haskell</key>
@@ -163,7 +163,7 @@
 		<key>Matlab</key>
 		<string>Support for MATLAB, and  Octave, two largely compatible high-level languages that enables you to perform computationally intensive tasks faster than with traditional programming languages.</string>
 		<key>Maven</key>
-		<string>Support for the Groovy programming language.</string>
+		<string>Support for working with Maven based projects.</string>
 		<key>Mediawiki</key>
 		<string>MediaWiki is the wiki package originally written for Wikipedia.</string>
 		<key>Mercurial</key>
