• for compatibility reintroduced help.markdown • Help from Gear Menu will show up help.markdown as usual by using markdown_to_help.rb
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10691 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -19,6 +19,8 @@
 	<key>ordering</key>
 	<array>
 		<string>A3156F4D-D08B-4A40-9842-2ADF68DAF9BE</string>
+		<string>4668A330-F43D-4FD7-8FB7-83AD52973BF5</string>
+		<string>ADD187FD-A8A4-4432-9D14-FA18970603E9</string>
 	</array>
 	<key>uuid</key>
 	<string>8156416B-073A-4540-ACDE-9B2B2724A1EF</string>
