• help updated • description cache updated
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10695 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/Support/lib/cachedDescriptions.plist
+++ b/Support/lib/cachedDescriptions.plist
@@ -375,6 +375,8 @@
 		<string>A bundle for the programming language K.  For more info, refer to Kx Systems.</string>
 		<key>Licenses</key>
 		<string></string>
+		<key>Limbo</key>
+		<string></string>
 		<key>Maude</key>
 		<string>Support for the Maude rewriting logic system.</string>
 		<key>Objective-C Unit Testing</key>
