• introduced a new tmcommand: Close Dialog  - this is a way to close the dialog in an exceptional case if it should happen that the dialog was stalled
git-svn-id: http://svn.textmate.org/trunk/Review/Bundles/GetBundles.tmbundle@10823 dfb7d73b-c2ec-0310-8fea-fb051d288c6d

--- a/info.plist
+++ b/info.plist
@@ -14,6 +14,19 @@
 	</array>
 	<key>description</key>
 	<string>GUI to install TextMate bundles coming from different svn or git hosts.&lt;hr /&gt;&lt;h2&gt;GetBundles&lt;/h2&gt;&lt;p&gt;&lt;i&gt;Author:&lt;/i&gt; Hans-J&amp;ouml;rg Bibiko&lt;/p&gt;&lt;p&gt;GetBundles provides an easy to use interface to install TextMate bundles which are hosted on textmate.org svn repositories &lt;a href="http://svn.textmate.org/trunk/Bundles"&gt;Bundles&lt;/a&gt; and &lt;a href="http://svn.textmate.org/trunk/Review/Bundles/"&gt;Review&lt;/a&gt;, on &lt;a href="http://github.com"&gt;github.com&lt;/a&gt;, and on private sites.&lt;/p&gt;</string>
+	<key>mainMenu</key>
+	<dict>
+		<key>items</key>
+		<array>
+			<string>A3156F4D-D08B-4A40-9842-2ADF68DAF9BE</string>
+			<string>4668A330-F43D-4FD7-8FB7-83AD52973BF5</string>
+			<string>ADD187FD-A8A4-4432-9D14-FA18970603E9</string>
+			<string>------------------------------------</string>
+			<string>F9F16538-9D83-45FC-B1FC-0D986786C325</string>
+		</array>
+		<key>submenus</key>
+		<dict/>
+	</dict>
 	<key>name</key>
 	<string>GetBundles</string>
 	<key>ordering</key>
